--- a/ruleta.html
+++ b/ruleta.html
@@ -409,7 +409,7 @@
                 }else if(index == largoCodigoQR){
                     console.log("**Entramos con: **")
                     temp  = strInput;
-                    idInvitado = temp
+                    idInvitado = simboloQR + temp
                     console.log({idInvitado})
                     tenemosQR(idInvitado)
                     index = 0
