--- a/sumapuntos.html
+++ b/sumapuntos.html
@@ -82,7 +82,7 @@
                     document.getElementById("numNuevasMonedas").innerHTML = puntosTotales + " puntos"
                     console.log("Puntos nuevos para este usuario")
                 }else{
-                    document.getElementById("numTotalMonedas").innerHTML = "Código QR ya escaneado previamente, inválido."
+                    document.getElementById("numTotalMonedas").innerHTML = "Código QR ya escaneado previamente, se conservará el puntaje mayor."
                     document.getElementById("numNuevasMonedas").innerHTML = puntosTotales + " puntos"
                     console.log("Puntos ya asignados a ese usuario")
                 }
