--- a/sumapuntos.html
+++ b/sumapuntos.html
@@ -15,7 +15,7 @@
     <div class="title" id="numTotalMonedas">Agregamos 0 puntos nuevos</div> <br><br><br>
     <div class="title" id="numNuevasMonedas">0 puntos</div>
     
-    <img src="img/2monedas.webp" alt="" srcset="" class="centerImage4" />
+    <img src="img/2monedas.webp" alt="" srcset="" class="centerImage4" onclick="borraCookie()"/>
     
     <script src="js/cookies.js"></script>
     <script>
