--- a/welcome.html
+++ b/welcome.html
@@ -18,7 +18,7 @@
     <div class="title" id="nombreCompleto">Total de puntos conseguidos:</div>
     <div class="title3" id="puntosTotales">0 puntos</div>
     <br><br><br>
-    <img src="img/muchasMonedas.webp" alt="" srcset="" class="centerImage4" />
+    <img src="img/muchasMonedas.webp" alt="" srcset="" class="centerImage4" onclick="borraCookie()"/>
     <script src="js/cookies.js"></script>
     <script>
         function borraCookie(){
